--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <nav class="navbar navbar-expand-lg" style="background-color: #0B1E28;">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Emanuel Barego Law Firm</a>
+          <a class="navbar-brand" href="#">Emanuel Borrego Law Firm</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -46,13 +46,15 @@
                     The Best Lawyer in America
                     <a href="https://sun9-72.userapi.com/impf/zpzvPvO18ewZyGSwXFifUoV6UaTvkdg8H8cfHQ/NRJrUkSv86k.jpg?size=609x918&quality=95&sign=24ab9ab04395cd33010dede797fa7cd3&type=album"target="_blank" class="clickHere">Click Here!</a>
             </div>
+            
         </section>
         <div class="tron">
             <div class="text-center">
-               center
               </div>
           <h1 class="display-4">OVER $100 MILLION RECOVERED</h1>
-          <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+          <p class="lead">1-800-CALLMANNY <br>
+            Attorney Emanuel Boreggo has over 60 years experience representing both individual clients as well as large multi-national corporations.
+          </p>
         </div>
       </div>
 
